display mood on marker view